fixed image and text alignment for index in desktop view

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -337,7 +337,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     /* width: 100%; */
   }
 
@@ -363,9 +363,13 @@ footer {
   }
 
   .headshot {
-    display: inline-flex;
     margin: 2px;
     min-width: 50%;
+  }
+
+  .headshot figure {
+    display: flex;
+    align-items: center;
   }
 
   /* Here is the styling for the about.html */
